# MICKEY

./: .gitignore  BUILD-AND-RELEASE.md  DEPLOY.md  INSTALLER.md  MICKEY-Implementation-Blueprint.md  MICKEY-Plan.md  README-INSTALL.txt  README.md  SETUP-CLOUD.md  START-MICKEY.bat  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
db-server/: index.js  package.json
media-server/: README.md  index.js  package.json
mickey-cloud/: package.json
playwright-server/: README.md  index.js  package-lock.json  package.json
scripts/: MICKEY_Users_Credentials.csv  make-icon.mjs  package.mjs  requirements-seed.txt  run-sidecars.mjs  seed_users.py  verify.mjs  whisper_stt.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: hooks.nsh  install-deps.ps1
src-tauri/src/: lib.rs  main.rs
src/components/: BootSequence.tsx  CommandPalette.tsx  GlassPanel.tsx  Markdown.tsx  RiskRadar.tsx  TaskWindows.tsx  Toasts.tsx  TopBar.tsx  VoiceCommandBar.tsx
src/data/: agents.ts
src/lib/: announcer.ts  cloudDb.ts  confetti.ts  costModel.ts  customAgents.ts  db.ts  factory.ts  gmail.ts  grokGen.ts  guard.ts  language.ts  licenseApi.ts  llm.ts  localDb.ts  longMemory.ts  memory.ts  models.ts  morningProtocol.ts  news.ts  nova.ts  orchestrator.ts  playwrightActions.ts  quickActions.ts  sandbox.ts  scriptStudio.ts  sfx.ts  sidecars.ts  supabaseClient.ts  taskRunner.ts  telegram.ts  themes.ts  thumbnails.ts  (+8 more)
(+48 files in other folders)
